# pdf-flattening

./: AGENTS.md  README.md  pyproject.toml
docs/features/: 0001_PLAN_initial_implementation.md  0002_PLAN_progress_indicator.md  0003_PLAN_batch_mode.md  0004_PLAN_auto_dpi.md  0005_PLAN_unit_tests.md
src/pdf_flattening/: __init__.py  cli.py  converter.py
tests/: conftest.py  test_converter.py
